# sos_flow

./: .gitignore  .gitmodules  AUTHORS  BUGS.org  CMakeLists.txt  CMakeLists.txt~  COPYING  Makefile  Makefile.am  Makefile.am~  Makefile.in  QUERY_PROCESSING.txt  README  README.md  TODO.org  TODO.txt  aclocal.m4  autogen.sh  config.h  config.h.in~  config.status  configure  configure.ac  configure.ac~  doxygen.cfg  go  go.hard  libtool  package.py  sourceme-edison.sh
.old_build/: configure.ac  sos_debug.h
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.0t  traces.1  traces.2  traces.3
cmake/: FindADIOS.cmake  FindCZMQ.cmake  FindEVPath.cmake  FindMunge.cmake  FindSOS.cmake  FindSOS.cmake.llnl  FindSQLite3.cmake  FindSqlite3.cmake  FindSqlite3.cmake.edison  FindTAU.cmake  FindZeroMQ.cmake  PreventInSourceBuilds.cmake
doc/: sos_flow.tag
doc/dox/: #doxample.c#  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap  cleanup  config.h  config.status  configure  configure.ac  doxample.c  test.sh
doc/dox/doxygen-doc/man/man1/: doxample.c.1
docs/: Makefile
etc/: configure.sh  env-titan.sh
examples/: .gitignore  CMakeLists.txt
examples/SimpleSOS/: SimpleSOS.cpp  SimpleSOS.hpp
examples/analysis_and_feedback/: CMakeLists.txt  analysis.c  analysis.h  client.c  client.h  protocol.c  protocol.h
examples/evpath/: dfg_client  dfg_client.c  dfg_master  dfg_master.c
examples/general/: 2apps-aprun.json  2apps-slurm.json  2apps.json  2nodes.json  5apps-multinode.json  5apps-slurm.json  5apps.json  5nodes.json  CMakeLists.txt  alps.py  arrays.xml  evpath.py  exchange.c  flexpath_reader.c  flexpath_writer.c  general.py  main.c  main.h  make  mandelbrot.c  mpi_reader.c  mpi_writer.c  reader.c  run_job.sh  run_new.sh  runit.sh  slurm.py  tau.conf  writer.c
examples/lulesh/: CMakeLists.txt  lulesh-init.cc  lulesh.cc  lulesh.h  plot_lulesh.py
examples/lulesh/job/: app.conf  dshm.sh  dstop.sh  job.conf  run.sh  sos.conf  viz.conf
examples/synthetic_1/: CMakeLists.txt  adios_config.xml  gread_a_to_b.ch  gread_sample_data.ch  gwrite_a_to_b.ch  gwrite_sample_data.ch  main.c  main.h  make  mandelbrot.c  run_a_b_only.sh  run_a_only.sh  runit.sh  util.h  worker.h  worker_a.c  worker_b.c  worker_c.c
examples/vtk/: .gitignore  CMakeLists.txt  data_kripke.vtk  data_lulesh.vtk  data_set.1.vtk  plot_mona.py  plot_vtk.py  readvtk.cxx  ssos.py  vtk_writer.py
output/: a chart!.ods
ref/: cmake-project.el  overview.dot  sosd_init_finalize_sequences.txt
scripts/: 1  configure-evpath.sh  configure-examples.sh  configure.sh  demo.bigtest  demo.bigtest.mpi  demo.bigtest.mpi-c-g  demo.trigger  demo.trigger.mpi  evp.backgrd_tasks  evp.cleanall  evp.kill.2  evp.leakchk  evp.start.2  evp.testkit  gorgon-ib0.txt  hosts.txt  make  mpi.batchrun.sh  mpi.cleanall  mpi.kill.2  mpi.start.1-1  mpi.start.2  project.setenv.sh  project.sourceme.testenv.sh  project.unsetenv.sh  run.app.kmean  runit  runit.local.edison  runtest-titan.sh  showdb  showdbdev  sock.start.2  sosd.00000.id  sosd.00000.key  sosd.00001.id  sosd.00001.key  sosd.00002.id  sosd.00002.key  (+19 more)
src/: #sos_debug.h#  .gitignore  .nfs0000002d6568703d00002f0b  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.h  config.h.in~  config.status  configure  configure.ac  configure.ac~  demo_app  demo_app.backup  demo_app.c  demo_app.c~  demo_app_silent.c  demo_const.c  demo_pipe.c  demo_sweep.c  four_start  go  go_parallel  go_series  libsos.la  libsos_la-sos.lo  libtool  make  make.chad  make.edison  mpi.cleanall  mpi.demo.all  mpi.kill.2  mpi.range  mpi.showdb  mpi.showdb.4  mpi.start  mpi.start.2  mpi.start.4  (+89 more)
src/.deps/: demo_app-demo_app.Po  libsos_la-sos.Plo  libsos_la-sos.Tpo  sos_cmd-sos_cmd.Po  sosd-sosd.Po
src/.libs/: demo_app  libsos.la  libsos.lai  libsos.so.0.0.0  lt-demo_app  lt-sosd  sos_cmd
src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/clients/: CMakeLists.txt  client_app.c
src/fortran/: fort_sos.f  fort_sos.f~  fort_sos_types.f
src/go_output/: output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output20.txt  output25.txt  output26.txt  output27.txt  output29.txt  output3.txt  output30.txt  output32.txt  output34.txt  output35.txt  output37.txt  output38.txt  output4.txt  output41.txt  output45.txt  output46.txt  output48.txt  output5.txt  output8.txt  output9.txt
src/ml/: getpts.sh  go  k_meanspp.c  kmeans  points.csv  tsv2eps  tsv2eps.c
src/python/: .gitignore  CMakeLists.txt  auto_transpose.py  build_pyssos.py  build_ssos_python.py  example.py  example_cache.py  get_attr.py  grab.py  lulesh.sql  plot_lulesh.py  qryfile.py  re_render_loop.sh  sos.py  sosd_trigger.py  ssos.py  ssos3.py  ssos_to_pandas.py  test_republish.py  trace_example.sh  vtk_writer.py
src/soapy/: README  compute-adios-periodicity.py  compute-window-periodicity.py  data_utils.py  draw.py  kevin.py  live_plot.py  live_plot.py~  run  runtime-query.py  simple_query.py
src/sosa_mods/: CMakeLists.txt  extract_kmean_2d.c  extract_tau.c  extract_to_adios.cpp  kmean_2d.c  latency.c  make  py_runner.c.backup  template.c
src/test_codes/: make_tests  mpi_comm_speed  run_tests
src/test_results/: output1.txt  output19.txt  output2.txt  output21.txt  output22.txt  output23.txt  output24.txt  output28.txt  output31.txt  output33.txt  output36.txt  output39.txt  output40.txt  output42.txt  output43.txt  output44.txt  output47.txt  output49.txt  output50.txt  output6.txt  output7.txt
src/tests/: .~lock.charts.ods#  charts.ods  make_tests  mpi_comm_speed.c
src/vection/: runit.sh~
src/vection/demo/: myfopen.c  prog  prog.c
src/vection/shared_c/: end_stats  end_stats.c~  example_waitpid.c  fork_tree.c  forker  forker.c~  runit.sh  wrap_fork.c~
tests/: .gitignore  CMakeLists.txt  LIMITATIONS  buffer.c  buffer.h  grindit  kevin_test.c  leakchk.c  make  make.leakchk  pack.c  pack.h  pub.c  pub.h  target.c  tau_test.c  test.c  test.h  test_pack.c  test_pack.h
(+328 files in other folders)
