dnl Process this file with autoconf to produce a configure script.
AC_INIT(sos_flow, 1.0, cdw@cs.uoregon.edu)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIC(src/)

AM_INIT_AUTOMAKE

AC_PROG_CXX


DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(OFF)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(OFF)
DX_PS_FEATURE(OFF)
DX_INIT_DOXYGEN(sos_flow, doxygen.cfg, doc)

AC_OUTPUT(Makefile src/Makefile)
